--- a/style.css
+++ b/style.css
@@ -10,16 +10,29 @@
     position: relative;
     text-transform: uppercase;
 }
+
+.button2 {
+    display: inline-block;
+    background: #4B99AD;
+    padding: 8px 15px 8px 15px;
+    border: none;
+    color: #fff;
+    border-radius: 2px;
+    padding: 0.48rem 0.8rem !important;
+    line-height: 1.4 !important;
+    position: relative;
+  }
+
 label,input  {
  display:block;
  margin-bottom: 5px;
 
  }
-.form-style input[type=text], .form-style input[type=password] {
- height: 28px;
- border-radius: 4px;
- border:1px solid #BEBEBE;
-}
+ .form-style input[type=text], .form-style input[type=password] {
+  height: 28px;
+  border-radius: 4px;
+  border:1px solid #BEBEBE;
+ }
 .form-style, h2 {
     margin:10px auto;
     max-width: 50%;
